#ADD_SUBDIRECTORY(test)
ADD_SUBDIRECTORY(data)
ADD_SUBDIRECTORY(pwn)
ADD_SUBDIRECTORY(pwn_viewer)
ADD_SUBDIRECTORY(line_extraction)
ADD_SUBDIRECTORY(slam)
ADD_SUBDIRECTORY(matcher)
#ADD_SUBDIRECTORY(slam2)
ADD_SUBDIRECTORY(ransac)
ADD_SUBDIRECTORY(thesis)
ADD_SUBDIRECTORY(dm_optimization)
ADD_SUBDIRECTORY(dm_viewer)
ADD_SUBDIRECTORY(apps)
ADD_SUBDIRECTORY(PlaneEx)
ADD_SUBDIRECTORY(PlaneEx_gui)
