#ADD_SUBDIRECTORY(test)
ADD_SUBDIRECTORY(basemath)
ADD_SUBDIRECTORY(data)
ADD_SUBDIRECTORY(pwn)
#ADD_SUBDIRECTORY(pwn_homogeneous)
#ADD_SUBDIRECTORY(pwn2)
ADD_SUBDIRECTORY(pwn_viewer)
ADD_SUBDIRECTORY(line_extraction)
ADD_SUBDIRECTORY(mapper)
ADD_SUBDIRECTORY(ransac)
ADD_SUBDIRECTORY(sensor_data)
ADD_SUBDIRECTORY(apps)
ADD_SUBDIRECTORY(PlaneEx)
ADD_SUBDIRECTORY(PlaneEx_gui)
#ADD_SUBDIRECTORY(line_alignment)
#ADD_SUBDIRECTORY(planeAligner)
#ADD_SUBDIRECTORY(planeAlignerJustTwo)
#ADD_SUBDIRECTORY(planeAlignerJustTwoTEST)
#ADD_SUBDIRECTORY(slam)
#ADD_SUBDIRECTORY(slam2)
#ADD_SUBDIRECTORY(dm_optimization)
#ADD_SUBDIRECTORY(dm_viewer)
