#ADD_SUBDIRECTORY(test)

ADD_SUBDIRECTORY(basemath)
ADD_SUBDIRECTORY(ransac)
ADD_SUBDIRECTORY(boss)
ADD_SUBDIRECTORY(boss_apps)
ADD_SUBDIRECTORY(boss_map)
ADD_SUBDIRECTORY(boss_map_building)

if(BUILD_OLD_SENSOR_DATA)
  ADD_SUBDIRECTORY(pwn)
  ADD_SUBDIRECTORY(data)
  ADD_SUBDIRECTORY(sensor_data)
  ADD_SUBDIRECTORY(slam)
endif (BUILD_OLD_SENSOR_DATA)

if(BUILD_PWN)
  ADD_SUBDIRECTORY(pwn_core)
  if(CUDA_FOUND)
    ADD_SUBDIRECTORY(pwn_cuda)
  endif(CUDA_FOUND)
  ADD_SUBDIRECTORY(pwn_boss)
  ADD_SUBDIRECTORY(pwn_viewer)
  ADD_SUBDIRECTORY(pwn_mapper)
  ADD_SUBDIRECTORY(pwn_test)
  ADD_SUBDIRECTORY(pwn_g2o)
  ADD_SUBDIRECTORY(pwn_apps)
  ADD_SUBDIRECTORY(pwn_odometry)
  ADD_SUBDIRECTORY(pwn_tracker)
  if(PCL_FOUND)
    ADD_SUBDIRECTORY(pwn_utils)
  endif(PCL_FOUND)
endif(BUILD_PWN)

if(BUILD_LINE_SLAM)
  ADD_SUBDIRECTORY(g2o_line_addons)
  ADD_SUBDIRECTORY(line_extraction)
  ADD_SUBDIRECTORY(line_alignment)
endif(BUILD_LINE_SLAM)

if(BUILD_PLANE_SLAM AND PCL_FOUND)
  ADD_SUBDIRECTORY(PlaneEx)
  ADD_SUBDIRECTORY(PlaneEx_gui)
  #ADD_SUBDIRECTORY(PlaneEx)
  #ADD_SUBDIRECTORY(PlaneEx_gui)
  #ADD_SUBDIRECTORY(planeAligner)
  #ADD_SUBDIRECTORY(planeAlignerJustTwo)
  #ADD_SUBDIRECTORY(planeAlignerTest)
  #ADD_SUBDIRECTORY(planeAlignerMultiTest)
    #ADD_SUBDIRECTORY(planeDatasetGenerator)
endif(BUILD_PLANE_SLAM AND PCL_FOUND)

if(BUILD_VORONOI_SLAM)
  ADD_SUBDIRECTORY(voronoi)
  ADD_SUBDIRECTORY(mapper)
endif(BUILD_VORONOI_SLAM)


IF(TRAVERSABILITY_FOUND)
  ADD_SUBDIRECTORY(traversability)
endif(TRAVERSABILITY_FOUND)


IF(BUILD_ROBOTEYE_LOGGER AND RobotEye_FOUND)
  ADD_SUBDIRECTORY(robot_eye_logger)
endif(BUILD_ROBOTEYE_LOGGER AND RobotEye_FOUND)




