INCLUDE_DIRECTORIES(${EIGEN_INCLUDE_DIR} ${PCL_INCLUDE_DIRS} ${OpenCV_INCLUDE_DIRS})
LINK_DIRECTORIES(${PCL_LIBRARY_DIRS} ${OpenCV_LIBRARY_DIRS})

##EXECUTABLE COMPILATION

INCLUDE_DIRECTORIES(${QGLVIEWER_INCLUDE_DIR} ${QT_INCLUDES})

ADD_LIBRARY(PlaneEx_gui_library
CloudUtils.cpp  CloudUtils.h
interface.cpp  interface.h  
moc_interface.cpp  
OverridedViewer.cpp  OverridedViewer.h  
viewer_slider.h
)
SET_TARGET_PROPERTIES(PlaneEx_gui_library PROPERTIES OUTPUT_NAME ${LIB_PREFIX}_planex_gui_library)

TARGET_LINK_LIBRARIES(PlaneEx_gui_library ${PCL_LIBRARIES}
${QGLVIEWER_LIBRARY} ${QT_QTXML_LIBRARY} ${QT_QTOPENGL_LIBRARY} ${QT_QTGUI_LIBRARY} ${QT_QTCORE_LIBRARY} 
${OPENGL_gl_LIBRARY} ${OPENGL_glu_LIBRARY} 
${G2O_STUFF_LIBRARY} ${G2O_OPENGL_HELPER_LIBRARY}
${OpenCV_LIBRARIES}  
)


ADD_EXECUTABLE(PlaneEx_gui main.cpp)

TARGET_LINK_LIBRARIES(PlaneEx_gui PlaneEx_gui_library
${PCL_LIBRARIES}
${QGLVIEWER_LIBRARY} ${QT_QTXML_LIBRARY} ${QT_QTOPENGL_LIBRARY} ${QT_QTGUI_LIBRARY} ${QT_QTCORE_LIBRARY} 
${OPENGL_gl_LIBRARY} ${OPENGL_glu_LIBRARY} 
${G2O_STUFF_LIBRARY} ${G2O_OPENGL_HELPER_LIBRARY}
${OpenCV_LIBRARIES}  
)
