INCLUDE_DIRECTORIES(${EIGEN_INCLUDE_DIR} ${CSPARSE_INCLUDE_DIR} ${OpenCV_INCLUDE_DIRS})
LINK_DIRECTORIES(${OpenCV_LIBRARY_DIRS})

ADD_EXECUTABLE(g2o2ros g2o2ros.cpp 
  frequency_map.cpp frequency_map.h
  grid_line_traversal.cpp grid_line_traversal.h 
)
SET_TARGET_PROPERTIES(g2o2ros PROPERTIES OUTPUT_NAME g2o2ros)
TARGET_LINK_LIBRARIES(g2o2ros 
  ${OpenCV_LIBS}
  ${G2O_CORE_LIBRARY}
  ${G2O_OPENGL_HELPER_LIBRARY}
  ${G2O_TYPES_DATA}
  ${G2O_TYPES_SLAM2D}
  ${G2O_TYPES_SLAM3D}
  ${G2O_STUFF_LIBRARY}
  ${G2O_CORE_LIBRARY}
  ${G2O_SOLVER_CSPARSE}
  ${G2O_STUFF_LIBRARY}
  ${G2O_SOLVER_CSPARSE_EXTENSION}
  ${CSPARSE_LIBRARY}
)