INCLUDE_DIRECTORIES(${EIGEN_INCLUDE_DIR} ${CSPARSE_INCLUDE_DIR})

ADD_EXECUTABLE(line_alignment   
line_alignment.cpp
alignment_utils.h)

TARGET_LINK_LIBRARIES(line_alignment
  ransac
  sensor_data_library
  types_data
  ${G2O_TYPES_SLAM2D}
  ${G2O_TYPES_SLAM3D}
  ${G2O_TYPES_SLAM2D_ADDONS}
  ${G2O_TYPES_SLAM3D_ADDONS}
  ${G2O_STUFF_LIBRARY} 
  ${G2O_CORE_LIBRARY} 
	${G2O_SOLVER_CSPARSE} 
	${G2O_SOLVER_CSPARSE_EXTENSION}
	${CSPARSE_LIBRARY}
  )
SET_TARGET_PROPERTIES(line_alignment PROPERTIES OUTPUT_NAME g2o_line_alignment${EXE_POSTFIX})
