CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT(Matcher)

SET(CMAKE_CXX_FLAGS_DEBUG "-o2")

SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${PROJECT_SOURCE_DIR}/cmake_modules)
SET(SRC_PATH ${PROJECT_SOURCE_DIR}/src)


FIND_PACKAGE(Eigen3 REQUIRED)
IF(EIGEN3_FOUND)
  MESSAGE("Eigen3 library found, good")
ELSE(EIGEN3_FOUND)
  MESSAGE("Eigen3 library NOT found, bad")
ENDIF(EIGEN3_FOUND)

FIND_PACKAGE(G2O REQUIRED)
IF(G2O_FOUND)
  SET(${PROJECT_NAME}_G2O_INCLUDE ${G2O_INCLUDE_DIR} CACHE PATH "Directory of G2O include")
  SET(${PROJECT_NAME}_G2O_LIBRARY_PATH ${G2O_LIBRARY_PATH} CACHE PATH "Directory of G2O libraries")
  MESSAGE("g2o library found, good")
ELSE(G2O_FOUND)
  SET(${PROJECT_NAME}_G2O_INCLUDE "" CACHE PATH "Directory of G2O include")
  MESSAGE("g2o library NOT found, bad")
ENDIF(G2O_FOUND)

MESSAGE("libraries: ${G2O_CORE_LIBRARY}")
INCLUDE_DIRECTORIES(${PROJECT_NAME} ${G2O_INCLUDE_DIR} ${EIGEN3_INCLUDE_DIR})

ADD_SUBDIRECTORY(src)

